added link to yt

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
     </div>
   </main>
 
-  <div style="color: white;" class="attribution">
+  <div style="color: white;" class="attribution flex flex-col">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Aaron Ragudos</a>.
+    Coded by <a href="https://youtube.com/@programmers_sanctuary?si=qYbA2dOUIYmXgs1m">Programmer&apos;s Sanctuary</a>.
   </div>
 </body>
 
