--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <picture>
         <source srcset="assets/images/illustration-sign-up-mobile.svg" media="(max-width: 1440px)">
-        <img src="assets/images/illustration-sign-up-desktop.svg" alt="Brand Design"  width="400" height="593"
+        <img src="assets/images/illustration-sign-up-desktop.svg" alt="Brand Design" width="400" height="593"
           loading="eager" decoding="async" />
       </picture>
     </div>
@@ -132,9 +132,20 @@
   </main>
 
   <footer style="color: white;" class="attribution flex flex-col">
-    <div>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</div>
-    <div>Coded by <a href="https://youtube.com/@programmers_sanctuary?si=qYbA2dOUIYmXgs1m">Programmer&apos;s
-        Sanctuary</a>.</div>
+    <div>
+      Challenge by
+      <div>
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+      </div>
+
+    </div>
+    </div>
+    <div>Coded by
+      <div>
+        <a href="https://youtube.com/@programmers_sanctuary?si=qYbA2dOUIYmXgs1m">Programmer&apos;s
+          Sanctuary.</a>
+      </div>
+    </div>
   </footer>
 </body>
 
