--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
 
       <picture>
         <source srcset="assets/images/illustration-sign-up-mobile.svg" media="(max-width: 1440px)">
-        <img src="assets/images/illustration-sign-up-desktop.svg" alt="Brand Design" width="400" height="593"
-          loading="eager" decoding="async" />
+        <img src="assets/images/illustration-sign-up-desktop.svg" alt="Brand Design" width="400" height="593" />
       </picture>
     </div>
 
@@ -106,19 +105,17 @@
               <path stroke="#FFF" stroke-width="2" d="M6 11.381 8.735 14 15 8" />
             </g>
           </svg>
-          <heading>
-            <h1>
-              <strong>
-                Thanks for subscribing!
-              </strong>
-            </h1>
+          <h1>
+            <strong>
+              Thanks for subscribing!
+            </strong>
+          </h1>
 
-            <p>
-              A confirmation email has been sent to
-              <span id="email-submitted" style="font-weight: 700;"></span>.
-              Please open it and click the button inside to confirm your subscription.
-            </p>
-          </heading>
+          <p>
+            A confirmation email has been sent to
+            <span id="email-submitted" style="font-weight: 700;"></span>.
+            Please open it and click the button inside to confirm your subscription.
+          </p>
         </div>
 
         <div>
