--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
     <div>Coded by
       <div>
-        <a href="https://youtube.com/@programmers_sanctuary?si=qYbA2dOUIYmXgs1m">Programmer&apos;s
+        <a href="https://youtube.com/@programmers_sanctuary?si=qYbA2dOUIYmXgs1m" target="_blank">Programmer&apos;s
           Sanctuary.</a>
       </div>
     </div>
